# fluidpatcher

./: .gitignore  404.html  LICENSE  README.md  bankedit.py  bankeditconf.yaml  fluidpatcher.html  fluidpatcher.pyw  fluidpatcherconf.yaml  fluidwrap.py  fpcli.py  headlesspi.py  index.html  lcdsplash.py  mkdocs.yaml  mkdocs.yml  objects.inv  patcher.py  patcherconf.yaml  programs.md  pyproject.toml  setup.py  squishbox.py  squishboxconf.yaml  stompboxpi.py  troubleshooting.md  wxfluidpatcher.py  wxfluidpatcher.pyw
.github/ISSUE_TEMPLATE/: help-request.md
.github/workflows/: main.yaml  main.yml  python-publish.yml
SquishBox/: squishboxconf.yaml
SquishBox/banks/: bank0.yaml  bank1.yaml
SquishBox/midi/: elevatorgroove.mid
SquishBox/sf2/: FM Piano.sf2  ModSynth.sf2  ModSynth_R1.sf2  ModWaves.sf2
api/bankfiles/: index.html
api/examples/: index.html
api/misc/: index.html
api/patcher/: index.html
api_reference/: index.html
assets/: patchcord.c  squishbox-install.bash  tinyfilemanager.php
bank_files/: index.html
banks/: bank0.yaml
basic_usage/: index.html
concepts/banks/: index.html
concepts/ladspa/: index.html
concepts/midi/: index.html
concepts/overview/: index.html
concepts/players/: index.html
concepts/soundfonts/: index.html
config/: index.html
config/banks/: bank1.yaml  control_names.txt  testbank.yaml  testwrite.yaml
doc/: troubleshooting.md
docs/: README.md  api_reference.md  bank_files.md  basic_usage.md  config.md  install.md  ladspa_plugins.md  programs.md  soundfonts.md
docs/api/: bankfiles.md  examples.md  misc.md  patcher.md
docs/concepts/: banks.md  ladspa.md  midi.md  overview.md  players.md  soundfonts.md
docs/tutorial/: cookbook.md  lesson01_basic.md  lesson02_messages.md  lesson03_rules.md  lesson04_players.md  lesson05_effects.md
fluidpatcher/: README.md  __init__.py  bankfiles.py  file_formats.md  file_formats.rst  patcher.py  pfluidsynth.py  router.py
fluidpatcher/config/: fluidpatcherconf.yaml
install/: index.html
ladspa_plugins/: index.html
patcher/: README.md  __init__.py  cclink.py  file_formats.md  fluidwrap.py  fpyaml.py  fswrap.py  yamlext.py
patcher/fluidwrap/: __init__.py  fluid1x.py  fluid2x.py
patcher/src/: README.md  bankloop.yaml  sbmidi.h  sbmidi_alsa.c  sbmidi_event.c  sbmidi_router.c  testoutput.c
scripts/: fluidpatcher_cli  fluidpatcher_cli.py  fpheadless.py  fpsynth.py  headless.py
scripts/config/: fluidpatcherconf.yaml
scripts/content/: squishboxconf.yaml
sf2/: FM Piano.sf2  VintageDreams.sf2
soundfonts/: index.html
src/fluidpatcher/: __init__.py  bankfiles.py  config.py  patcher.py  pfluidsynth.py  router.py
tutorial/cookbook/: index.html
utils/: README.md  fix_old_bank.py  hw_overlay.py  netlink.py  stompboxpi.py
(+27 files in other folders)
