[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidpatcher"
version = "1.0.1"
description = "FluidSynth patch manager and performance toolkit"
readme = "docs/README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Bill Peterson", email = "bill@geekfunklabs.com" }
]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/GeekFunkLabs/fluidpatcher"
Documentation = "https://geekfunklabs.github.io/fluidpatcher/"
Source = "https://github.com/GeekFunkLabs/fluidpatcher"

[project.scripts]
fpatcher-editor = "fluidpatcher.examples.live_bank_editor:main"

[tool.setuptools.package-data]
"fluidpatcher.data" = ["*.yaml", "banks/*", "midi/*.mid", "sounds/*.sf2"]
"fluidpatcher._ladspa" = ["prebuilt/*/*.so"]

